[gd_scene load_steps=37 format=2]

[ext_resource path="res://lobby/page/shop/chest_info.gd" type="Script" id=1]
[ext_resource path="res://lobby/page/battle/rewardbox_bg.png" type="Texture" id=2]
[ext_resource path="res://game/unit/light_material.tres" type="Material" id=3]
[ext_resource path="res://lobby/hud/lightcircle.png" type="Texture" id=4]
[ext_resource path="res://game/vfx/sphere.png" type="Texture" id=5]
[ext_resource path="res://lobby/resource/chest_icon.tscn" type="PackedScene" id=6]
[ext_resource path="res://lobby/page/battle/medalbox_btn_atv.png" type="Texture" id=7]
[ext_resource path="res://lobby/resource/popup_panel.png" type="Texture" id=8]
[ext_resource path="res://lobby/page/card/slots_panel_w.png" type="Texture" id=9]
[ext_resource path="res://font/scdream8.otf" type="DynamicFontData" id=10]
[ext_resource path="res://lobby/resource/board_white.png" type="Texture" id=11]
[ext_resource path="res://lobby/hud/galacticoin.tscn" type="PackedScene" id=12]
[ext_resource path="res://lobby/hud/card_icon.png" type="Texture" id=13]
[ext_resource path="res://lobby/page/battle/time_icon.png" type="Texture" id=14]
[ext_resource path="res://lobby/page/card/upgrade_button_t_hover.png" type="Texture" id=15]
[ext_resource path="res://lobby/page/card/upgrade_button_t_pressed.png" type="Texture" id=16]
[ext_resource path="res://lobby/page/card/upgrade_button_t.png" type="Texture" id=17]
[ext_resource path="res://lobby/hud/dimensium.tscn" type="PackedScene" id=18]
[ext_resource path="res://lobby/page/battle/point.png" type="Texture" id=19]

[sub_resource type="Curve" id=1]

_data = [ Vector2( 0, 0.5528 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]

offsets = PoolRealArray( 0.0166667, 0.169014, 1 )
colors = PoolColorArray( 1, 1, 1, 0.00321569, 1, 1, 1, 1, 1, 0.682353, 0.00784314, 0.0497255 )

[sub_resource type="DynamicFont" id=3]

size = 60
outline_size = 4
outline_color = Color( 0.298039, 0.298039, 0.298039, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]

size = 50
outline_size = 4
outline_color = Color( 0.298039, 0.298039, 0.298039, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]

size = 32
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]

size = 55
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]

size = 55
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=8]

size = 32
outline_color = Color( 0.67451, 0.67451, 0.67451, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=9]

size = 42
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=10]

size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=11]

size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=12]

size = 28
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxTexture" id=13]

texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 230, 120 )
margin_left = 49.75
margin_right = 49.75
margin_top = 50.0
margin_bottom = 49.5

[sub_resource type="StyleBoxTexture" id=14]

texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 230, 120 )
margin_left = 49.5
margin_right = 50.0
margin_top = 50.0
margin_bottom = 50.0

[sub_resource type="StyleBoxTexture" id=15]

texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 230, 120 )
margin_left = 50.0
margin_right = 50.0
margin_top = 49.75
margin_bottom = 50.0

[sub_resource type="DynamicFont" id=16]

size = 52
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=17]

size = 32
outline_size = 4
outline_color = Color( 0, 0.713726, 0.313726, 1 )
font_data = ExtResource( 10 )

[node name="ChestInfo" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -960.0
margin_right = 540.0
margin_bottom = 960.0
script = ExtResource( 1 )

[node name="Shade" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -720.0
margin_top = -960.0
margin_right = 720.0
margin_bottom = 960.0
texture = ExtResource( 2 )
expand = true

[node name="Popup" type="Control" parent="."]
self_modulate = Color( 0.2, 0.290196, 0.372549, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -530.0
margin_top = -355.0
margin_right = 530.0
margin_bottom = 355.0
mouse_filter = 2

[node name="Chest" type="Control" parent="Popup"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -540.0
margin_top = -544.0
margin_right = 540.0

[node name="BGeffect" type="CPUParticles2D" parent="Popup/Chest"]
editor/display_folded = true
material = ExtResource( 3 )
position = Vector2( 516, 374 )
amount = 1
lifetime = 3.0
speed_scale = 0.5
texture = ExtResource( 4 )
gravity = Vector2( 0, 0 )
angular_velocity = 180.0
angular_velocity_random = 1.0
radial_accel_random = 1.0
scale_amount = 6.0
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Popup/Chest/BGeffect"]
self_modulate = Color( 0.129412, 0.756863, 1, 1 )
material = ExtResource( 3 )
margin_left = -515.0
margin_top = -332.0
margin_right = 560.0
margin_bottom = 332.0
texture = ExtResource( 5 )
expand = true

[node name="Icon" parent="Popup/Chest" instance=ExtResource( 6 )]
margin_left = 171.0
margin_top = 190.0
margin_right = 171.0
margin_bottom = 190.0
rect_scale = Vector2( 2, 2 )

[node name="Panel" type="NinePatchRect" parent="Popup"]
self_modulate = Color( 0.2, 0.290196, 0.372549, 1 )
margin_right = 1060.0
margin_bottom = 710.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 200, 200 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40

[node name="InnerPanel" type="NinePatchRect" parent="Popup/Panel"]
margin_left = 11.0
margin_top = 91.0
margin_right = 1051.0
margin_bottom = 698.0
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 200, 200 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 29

[node name="Title" type="Control" parent="Popup/Panel"]
editor/display_folded = true
margin_left = -12.0
margin_top = 13.0
margin_right = -12.0
margin_bottom = 13.0

[node name="Center" type="TextureRect" parent="Popup/Panel/Title"]
self_modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
margin_right = 1080.0
margin_bottom = 70.0
texture = ExtResource( 9 )
expand = true

[node name="Top" type="TextureRect" parent="Popup/Panel/Title"]
self_modulate = Color( 0.0901961, 0.572549, 1, 1 )
margin_right = 1080.0
margin_bottom = 5.0
texture = ExtResource( 9 )
expand = true

[node name="Bottom" type="TextureRect" parent="Popup/Panel/Title"]
self_modulate = Color( 0.0901961, 0.572549, 1, 1 )
margin_top = 65.0
margin_right = 1080.0
margin_bottom = 70.0
texture = ExtResource( 9 )
expand = true

[node name="ChestName" type="Label" parent="Popup/Panel/Title"]
margin_right = 1080.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 3 )
text = "GOLD CHEST"
align = 1
valign = 1

[node name="Contents" type="Control" parent="Popup/Panel"]
editor/display_folded = true
margin_left = -10.0
margin_top = -44.0
margin_right = 1070.0
margin_bottom = 786.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 2

[node name="Arena" type="Label" parent="Popup/Panel/Contents"]
margin_left = -2.0
margin_top = 137.0
margin_right = 1078.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 4 )
text = "Thanatos"
align = 1
valign = 1

[node name="Coin" type="Control" parent="Popup/Panel/Contents"]
margin_left = 34.0
margin_top = -353.0
margin_right = 74.0
margin_bottom = -313.0

[node name="InputForm3" type="NinePatchRect" parent="Popup/Panel/Contents/Coin"]
self_modulate = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
margin_left = -3.0
margin_top = 585.0
margin_right = 502.0
margin_bottom = 705.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 200, 200 )
patch_margin_left = 29
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 29

[node name="GalacticText" type="Label" parent="Popup/Panel/Contents/Coin"]
margin_left = 12.0
margin_top = 578.0
margin_right = 289.0
margin_bottom = 627.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.737255, 0.364706, 1 )
text = "Galactic Coin"
valign = 2

[node name="Galacticoin2" parent="Popup/Panel/Contents/Coin" instance=ExtResource( 12 )]
position = Vector2( 54, 668 )

[node name="Amount" type="Label" parent="Popup/Panel/Contents/Coin"]
margin_left = 89.0
margin_top = 639.0
margin_right = 488.0
margin_bottom = 706.0
custom_fonts/font = SubResource( 6 )
text = "1800-2500"

[node name="Card" type="Control" parent="Popup/Panel/Contents"]
margin_left = 24.0
margin_top = -353.0
margin_right = 64.0
margin_bottom = -313.0

[node name="InputForm3" type="NinePatchRect" parent="Popup/Panel/Contents/Card"]
self_modulate = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
margin_left = 522.0
margin_top = 585.0
margin_right = 1027.0
margin_bottom = 705.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 200, 200 )
patch_margin_left = 29
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30

[node name="CardText" type="Label" parent="Popup/Panel/Contents/Card"]
margin_left = 542.0
margin_top = 578.0
margin_right = 766.0
margin_bottom = 627.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.364706, 0.701961, 1, 1 )
text = "Card"
valign = 2

[node name="Amount" type="Label" parent="Popup/Panel/Contents/Card"]
margin_left = 608.0
margin_top = 639.0
margin_right = 1018.0
margin_bottom = 706.0
custom_fonts/font = SubResource( 7 )
text = "x 99999"

[node name="TextureRect" type="TextureRect" parent="Popup/Panel/Contents/Card"]
margin_left = 547.0
margin_top = 636.0
margin_right = 609.0
margin_bottom = 706.0
texture = ExtResource( 13 )

[node name="Guaranteed" type="NinePatchRect" parent="Popup/Panel/Contents"]
editor/display_folded = true
self_modulate = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
margin_left = 31.0
margin_top = 362.0
margin_right = 1051.0
margin_bottom = 542.0
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 200, 200 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 41
patch_margin_bottom = 40

[node name="Description" type="Label" parent="Popup/Panel/Contents/Guaranteed"]
margin_left = 20.0
margin_top = 6.0
margin_right = 415.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
text = "Contains at least"
valign = 2

[node name="Rare" type="Label" parent="Popup/Panel/Contents/Guaranteed"]
editor/display_folded = true
margin_left = 82.0
margin_top = 114.0
margin_right = 286.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.243137, 0.219608, 1, 1 )
text = "x 9999"
valign = 2

[node name="Name" type="Label" parent="Popup/Panel/Contents/Guaranteed/Rare"]
margin_left = -2.0
margin_top = -38.0
margin_right = 271.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.243137, 0.219608, 1, 1 )
text = "Rares"
valign = 2

[node name="Icon" type="TextureRect" parent="Popup/Panel/Contents/Guaranteed/Rare"]
margin_left = -60.0
margin_top = -3.0
margin_right = 2.0
margin_bottom = 67.0
texture = ExtResource( 13 )

[node name="Epic" type="Label" parent="Popup/Panel/Contents/Guaranteed"]
editor/display_folded = true
margin_left = 402.0
margin_top = 114.0
margin_right = 606.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.0470588, 0.337255, 0.192157, 1 )
text = "x 9999"
valign = 2

[node name="Name" type="Label" parent="Popup/Panel/Contents/Guaranteed/Epic"]
margin_left = -2.0
margin_top = -38.0
margin_right = 271.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.0470588, 0.337255, 0.192157, 1 )
text = "Epics"
valign = 2

[node name="Icon" type="TextureRect" parent="Popup/Panel/Contents/Guaranteed/Epic"]
margin_left = -60.0
margin_top = -3.0
margin_right = 2.0
margin_bottom = 67.0
texture = ExtResource( 13 )

[node name="Legendary" type="Label" parent="Popup/Panel/Contents/Guaranteed"]
editor/display_folded = true
margin_left = 702.0
margin_top = 114.0
margin_right = 906.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.482353, 0.0627451, 0.0627451, 1 )
text = "x 9999"
valign = 2

[node name="Name" type="Label" parent="Popup/Panel/Contents/Guaranteed/Legendary"]
margin_left = 1.0
margin_top = -38.0
margin_right = 310.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.482353, 0.0627451, 0.0627451, 1 )
text = "Legendaries"
valign = 2

[node name="Icon" type="TextureRect" parent="Popup/Panel/Contents/Guaranteed/Legendary"]
margin_left = -58.0
margin_top = -3.0
margin_right = 4.0
margin_bottom = 67.0
texture = ExtResource( 13 )

[node name="TimeLeft" type="Label" parent="Popup/Panel/Contents"]
editor/display_folded = true
margin_left = 76.0
margin_top = 630.0
margin_right = 387.0
margin_bottom = 689.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "9h 30m"
valign = 1

[node name="Icon" type="TextureRect" parent="Popup/Panel/Contents/TimeLeft"]
margin_left = -33.0
margin_top = -30.0
margin_right = -3.0
texture = ExtResource( 14 )

[node name="Description" type="Label" parent="Popup/Panel/Contents/TimeLeft"]
margin_top = -36.0
margin_right = 202.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 12 )
text = "UNLOCK TO"
align = 1
valign = 2

[node name="Open" type="Button" parent="Popup/Panel/Contents"]
visible = false
margin_left = 400.0
margin_top = 584.0
margin_right = 700.0
margin_bottom = 708.0
rect_min_size = Vector2( 300, 124 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )

[node name="Label" type="Label" parent="Popup/Panel/Contents/Open"]
margin_left = 60.0
margin_top = 18.0
margin_right = 244.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "OPEN"
align = 2
valign = 2

[node name="InstantOpen" type="Button" parent="Popup/Panel/Contents"]
margin_left = 700.0
margin_top = 600.0
margin_right = 1000.0
margin_bottom = 724.0
rect_min_size = Vector2( 300, 124 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )

[node name="Text" type="Label" parent="Popup/Panel/Contents/InstantOpen"]
margin_left = 12.0
margin_top = -41.0
margin_right = 291.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 17 )
text = "OPEN NOW"
align = 1
valign = 2

[node name="Cost" type="Label" parent="Popup/Panel/Contents/InstantOpen"]
margin_left = 13.0
margin_top = 18.0
margin_right = 178.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "750"
align = 2
valign = 2

[node name="Icon" parent="Popup/Panel/Contents/InstantOpen" instance=ExtResource( 18 )]
position = Vector2( 223, 62 )

[node name="Arrow0" type="TextureRect" parent="Popup/Panel"]
self_modulate = Color( 0.2, 0.290196, 0.372549, 1 )
margin_left = 60.0
margin_top = 689.0
margin_right = 140.0
margin_bottom = 769.0
texture = ExtResource( 19 )

[node name="Arrow1" type="TextureRect" parent="Popup/Panel"]
visible = false
self_modulate = Color( 0.2, 0.290196, 0.372549, 1 )
margin_left = 340.0
margin_top = 689.0
margin_right = 420.0
margin_bottom = 769.0
texture = ExtResource( 19 )

[node name="Arrow2" type="TextureRect" parent="Popup/Panel"]
visible = false
self_modulate = Color( 0.2, 0.290196, 0.372549, 1 )
margin_left = 620.0
margin_top = 689.0
margin_right = 700.0
margin_bottom = 769.0
texture = ExtResource( 19 )

[node name="Arrow3" type="TextureRect" parent="Popup/Panel"]
visible = false
self_modulate = Color( 0.2, 0.290196, 0.372549, 1 )
margin_left = 920.0
margin_top = 689.0
margin_right = 1000.0
margin_bottom = 769.0
texture = ExtResource( 19 )

[node name="UpperSlotPosition" type="Position2D" parent="."]
position = Vector2( 10, 400 )

[node name="LowerSlotPosition" type="Position2D" parent="."]
position = Vector2( 10, 700 )

